--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -14,7 +14,6 @@
     height: 50vh;
     bottom: -50%;
     transition: bottom 1s, height 1s;
-    border: yellow dashed 1px;
   }
 
   .tab {
@@ -61,7 +60,6 @@
       padding: 12px 24px;
       z-index: 1;
       height: 100%;
-      overflow: hidden;
     }
 
     ul {
